# snaptap-prediction-markets

./: .env.example  .gitignore  README.md  download_client.cjs  download_orders.cjs  fetch_client.cjs  index.html  metadata.json  package-lock.json  package.json  server.ts  test_api.cjs  test_order.cjs
app/applet/: count.js  test_pagination.js
docs/: txline-integration.md
program/: Anchor.toml
program/idl/: txline_devnet.json
program/programs/snaptap_settlement/: Cargo.toml
program/programs/snaptap_settlement/src/: lib.rs
src/: App.tsx  index.css  vite-env.d.ts
src/adapters/: eventsApi.ts  resultsDb.ts  txodds.ts
src/components/: BetSlip.tsx  LiveBroadcast.tsx  Logo.tsx  MarketCard.tsx  MatchCenter.tsx  OnboardingModals.tsx  ResolutionReceipt.tsx  SkeletonLoader.tsx  WalletContextProvider.tsx
src/context/: AppContext.tsx
src/hooks/: useSnaptapMarket.ts
src/idl/: snaptap_settlement.json
src/lib/: snaptapClient.ts  txlineApi.ts  useDevnetSwitch.ts  useStakeBalance.ts  useWalletAuth.ts
src/screens/: ActivityScreen.tsx  MainFeed.tsx  SettingsHub.tsx  WorldCupScreen.tsx
src/services/: AggregatorService.ts
src/utils/: feedback.ts  rosterData.ts
